local_ai_assistant/check_output.txt
warning: unused manifest key: build
warning: unused manifest key: target.x86_64-apple-darwin.rustflags
    Checking local_ai_assistant v0.1.0 (/Volumes/UltraDisk/Dev2/crypto-projects/iDoris/local_ai_assistant)
error: expected identifier
  --> src/components/model_manager.rs:88:44
   |
88 |                         let models_to_show = models();
   |                                            ^

error[E0433]: failed to resolve: unresolved import
  --> src/server_functions/server_model_manager.rs:5:12
   |
5  | use crate::core::model_manager::ModelManager;
   |            ^^^^
   |            |
   |            unresolved import
   |            help: a similar path exists: `dioxus::core`
   |
note: found an item that was configured out
  --> src/main.rs:12:5
   |
12 | mod core;
   |     ^^^^
note: the item is gated behind the `server` feature
  --> src/main.rs:11:7
   |
11 | #[cfg(feature = "server")]
   |       ^^^^^^^^^^^^^^^^^^

warning: unused import: `ChatRole`
 --> src/components/chat.rs:7:34
  |
7 | use crate::models::{ChatMessage, ChatRole, Session, AppSettings};
  |                                  ^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default

warning: unused imports: `ensure_model_cached`, `get_image_gen_status`, and `init_hf_cache`
 --> src/components/settings_page.rs:7:45
  |
7 |     is_image_model_ready, init_image_model, get_image_gen_status,
  |                                             ^^^^^^^^^^^^^^^^^^^^
8 |     list_cached_models, download_model, ensure_model_cached, init_hf_cache,
  |                                         ^^^^^^^^^^^^^^^^^^^  ^^^^^^^^^^^^^

warning: unused import: `ImageGenStatus`
 --> src/components/image_gen.rs:7:78
  |
7 |     generate_image, is_image_model_ready, get_image_gen_status, ImageResult, ImageGenStatus
  |                                                                              ^^^^^^^^^^^^^^

warning: unused import: `VideoConfig`
 --> src/components/video_gen.rs:6:48
  |
6 | use crate::models::{VideoProvider, VideoModel, VideoConfig, VideoQuality};
  |                                                ^^^^^^^^^^^

warning: unused import: `init_hf_cache`
 --> src/components/model_manager.rs:7:71
  |
7 |     list_cached_models, download_model, delete_model, get_cache_info, init_hf_cache
  |                                                                       ^^^^^^^^^^^^^

warning: unused import: `settings::SettingsPanel`
  --> src/components/mod.rs:19:9
   |
19 | pub use settings::SettingsPanel;
   |         ^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `document::Document`
  --> src/models/mod.rs:13:9
   |
13 | pub use document::Document;
   |         ^^^^^^^^^^^^^^^^^^

warning: unused import: `get_available_models`
  --> src/models/mod.rs:15:68
   |
15 | pub use model_info::{ModelInfo, ModelStatus, ModelType, CacheInfo, get_available_models};
   |                                                                    ^^^^^^^^^^^^^^^^^^^^

warning: unused imports: `ArticleTemplate`, `EditorContent`, `EditorSection`, `Platform`, `TemplateSection`, `WritingStyle`, and `get_builtin_templates`
  --> src/models/mod.rs:17:5
   |
17 |     ArticleTemplate, EditorContent, EditorSection, Platform,
   |     ^^^^^^^^^^^^^^^  ^^^^^^^^^^^^^  ^^^^^^^^^^^^^  ^^^^^^^^
18 |     WritingStyle, TemplateSection, get_builtin_templates,
   |     ^^^^^^^^^^^^  ^^^^^^^^^^^^^^^  ^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `ModelStatus`
 --> src/server_functions/chat.rs:8:32
  |
8 | use crate::models::{ModelInfo, ModelStatus};
  |                                ^^^^^^^^^^^

warning: unused import: `std::path::PathBuf`
 --> src/server_functions/context.rs:7:5
  |
7 | use std::path::PathBuf;
  |     ^^^^^^^^^^^^^^^^^^

warning: unused import: `VideoConfig`
 --> src/server_functions/server_video_gen.rs:8:48
  |
8 | use crate::models::{VideoProvider, VideoModel, VideoConfig, VideoQuality};
  |                                                ^^^^^^^^^^^

warning: variable does not need to be mutable
   --> src/components/model_manager.rs:211:5
    |
211 |     mut models: Signal<Vec<ModelInfo>>,
    |     ----^^^^^^
    |     |
    |     help: remove this `mut`
    |
    = note: `#[warn(unused_mut)]` on by default

warning: variable does not need to be mutable
   --> src/components/model_manager.rs:212:5
    |
212 |     mut cache_info: Signal<CacheInfo>,
    |     ----^^^^^^^^^^
    |     |
    |     help: remove this `mut`

warning: variable does not need to be mutable
   --> src/components/model_manager.rs:235:5
    |
235 |     mut models: Signal<Vec<ModelInfo>>,
    |     ----^^^^^^
    |     |
    |     help: remove this `mut`

warning: variable does not need to be mutable
   --> src/components/model_manager.rs:236:5
    |
236 |     mut cache_info: Signal<CacheInfo>,
    |     ----^^^^^^^^^^
    |     |
    |     help: remove this `mut`

warning: variable does not need to be mutable
  --> src/components/chat.rs:33:9
   |
33 |     let mut state = use_signal(|| ChatState {
   |         ----^^^^^
   |         |
   |         help: remove this `mut`

warning: unused variable: `e`
   --> src/components/chat.rs:667:21
    |
667 |                 Err(e) => {
    |                     ^ help: if this is intentional, prefix it with an underscore: `_e`
    |
    = note: `#[warn(unused_variables)]` on by default

warning: variable `chunk_count` is assigned to, but never used
   --> src/components/chat.rs:693:25
    |
693 |                 let mut chunk_count = 0;
    |                         ^^^^^^^^^^^
    |
    = note: consider using `_chunk_count` instead

warning: unused variable: `e`
   --> src/components/chat.rs:713:29
    |
713 |                         Err(e) => {
    |                             ^ help: if this is intentional, prefix it with an underscore: `_e`

warning: unused variable: `e`
   --> src/components/chat.rs:723:17
    |
723 |             Err(e) => {
    |                 ^ help: if this is intentional, prefix it with an underscore: `_e`

warning: unused variable: `download_progress`
   --> src/components/settings_page.rs:178:13
    |
178 |     let mut download_progress: Signal<u8> = use_signal(|| 0);
    |             ^^^^^^^^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_download_progress`

warning: variable does not need to be mutable
   --> src/components/settings_page.rs:178:9
    |
178 |     let mut download_progress: Signal<u8> = use_signal(|| 0);
    |         ----^^^^^^^^^^^^^^^^^
    |         |
    |         help: remove this `mut`

warning: variable does not need to be mutable
   --> src/components/settings_page.rs:182:9
    |
182 |     let mut models: Signal<Vec<ModelInfo>> = use_signal(|| Vec::new());
    |         ----^^^^^^
    |         |
    |         help: remove this `mut`

warning: variable does not need to be mutable
   --> src/components/settings_page.rs:183:9
    |
183 |     let mut llm_downloading: Signal<bool> = use_signal(|| false);
    |         ----^^^^^^^^^^^^^^^
    |         |
    |         help: remove this `mut`

warning: variable does not need to be mutable
   --> src/components/settings_page.rs:184:9
    |
184 |     let mut llm_status: Signal<String> = use_signal(|| "Checking models...".to_string());
    |         ----^^^^^^^^^^
    |         |
    |         help: remove this `mut`

warning: variable does not need to be mutable
  --> src/components/content_editor.rs:25:9
   |
25 |     let mut templates = use_signal(|| get_builtin_templates());
   |         ----^^^^^^^^^
   |         |
   |         help: remove this `mut`

warning: variable does not need to be mutable
  --> src/components/content_editor.rs:47:9
   |
47 |     let mut handle_fetch_rss = move |_| {
   |         ----^^^^^^^^^^^^^^^^
   |         |
   |         help: remove this `mut`

warning: variable does not need to be mutable
  --> src/components/content_editor.rs:72:9
   |
72 |     let mut handle_extract_article = move |_| {
   |         ----^^^^^^^^^^^^^^^^^^^^^^
   |         |
   |         help: remove this `mut`

warning: variable does not need to be mutable
   --> src/components/content_editor.rs:102:9
    |
102 |     let mut handle_generate_outline = move |_| {
    |         ----^^^^^^^^^^^^^^^^^^^^^^^
    |         |
    |         help: remove this `mut`

For more information about this error, try `rustc --explain E0433`.
warning: `local_ai_assistant` (bin "local_ai_assistant") generated 30 warnings
error: could not compile `local_ai_assistant` (bin "local_ai_assistant") due to 2 previous errors; 30 warnings emitted
